# multi-asset-stock-prediction-research

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
notebooks/: 01_stock_prediction_research.ipynb
src/stock_prediction/: __init__.py
src/stock_prediction/data/: __init__.py  loader.py
src/stock_prediction/features/: __init__.py  engineering.py
src/stock_prediction/models/: __init__.py  factory.py
src/stock_prediction/utils/: __init__.py  config.py  evaluation.py
tests/: test_config.py  test_features.py  test_models.py
